[UPDATE] food swagger
